# wcf-rpc-sdk

./: .gitignore  LICENSE  README.md  cacheUserManager.go  client.go  client_test.go  docker-compose.yml  go.mod  go.sum  injector.go  message.go  message_test.go  self.go
docker_wechat/: .gitignore  README.md  docker-compose.yml
docker_wechat/.github/workflows/: build.yml
docker_wechat/docker/: Dockerfile  docker_run.sh
docker_wechat/injector/: main.go
docker_wechat/res/: WeChat.desktop  WeChatFerry.desktop  WeChatSetup.desktop  entrypoint.sh  launch.sh
docs/: wcf-protobuf.md  wcf-rpc.md  wcf-wxmsg.md
internal/manager/: cacheFileManager.go  cacheManager.go  cacheManager_test.go
internal/proto/: roomdata.pb.go  roomdata.proto  wcf.proto
internal/utils/: util.go
internal/utils/base64util/: base64util.go
internal/utils/imgutil/: imgutil.go  imgutil_test.go
internal/wcf/: roomdata.pb.go  wcf.go  wcf.pb.go  wcf_test.go
logging/: logging.go
proto/: wechat_rpc.pb.go  wechat_rpc.proto  wechat_rpc_grpc.pb.go
python/: pyproject.toml
python/tests/: test_client.py
python/wcf_rpc_sdk/: __init__.py  client.py  exceptions.py  message.py  roomdata_pb2.py  transport.py  utils.py  wcf_pb2.py
