[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wcf-rpc-sdk"
version = "0.1.0"
description = "Python client for the WeChat Ferry RPC service"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "protobuf>=3.20",
]

[project.optional-dependencies]
transport = ["pynng>=0.7"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
